--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "@types/node": "^12.12.53",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "@types/react-router-dom": "^5.1.5",
+    "gh-pages": "^3.1.0",
+    "react": "^17.0.0-rc.0",
+    "react-dom": "^17.0.0-rc.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "typescript": "^3.7.5"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build && cp ./build/index.html ./build/404.html && echo \"fastcashmoneyplus.biz\" > docs/CNAME"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://ronamerch.co"
 }
