--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "checkJs": false
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+      "node_modules/*/**"
   ]
 }
